5_service_example/session-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: test2
