5_service_example/test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: test
