5_service_example/ing-test-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ing
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-nodeport
          servicePort: 80
